@@ -55,13 +55,13 @@ AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 AC_SUBST(CXXFLAGS)
 
-PETIG_CHECK_COMMONXX
+MPC_CHECK_BASE
 PETIG_CHECK_COMMONGTK2
 MPC_CHECK_SIGC_MATCH
 
-KOMPONENTEN_INCLUDES="$COMMONXX_INCLUDES $COMMONGTK2_INCLUDES -I\$(top_srcdir)/src"
-KOMPONENTEN_LDFLAGS="$COMMONXX_LDFLAGS $COMMONGTK2_LDFLAGS"
-KOMPONENTEN_LIBS="\$(top_srcdir)/src/libManuProC_Widgets.a $COMMONXX_LIBS $COMMONGTK2_LIBS"
+KOMPONENTEN_INCLUDES="$MPC_BASE_INCLUDES $COMMONGTK2_INCLUDES -I\$(top_srcdir)/src"
+KOMPONENTEN_LDFLAGS="$MPC_BASE_LDFLAGS $COMMONGTK2_LDFLAGS"
+KOMPONENTEN_LIBS="\$(top_srcdir)/src/libManuProC_Widgets.a $MPC_BASE_LIBS $COMMONGTK2_LIBS"
 AC_SUBST(KOMPONENTEN_INCLUDES)
 AC_SUBST(KOMPONENTEN_LDFLAGS)
 AC_SUBST(KOMPONENTEN_LIBS)
